# compound_indexer

./: .gitignore  app.py  ingest.py  pyproject.toml  run.py
app/: __init__.py  config.py  models.py  routes.py
migrations/versions/: 562b35804942_initial_migration.py
