[tool.poetry]
name = "compound-indexer"
version = "0.1.0"
description = ""
authors = ["ragilzakaria <ragilzakaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^7.6.0"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
flask-restx = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
